--- a/src/components/atoms/main-title.module.css
+++ b/src/components/atoms/main-title.module.css
@@ -2,13 +2,13 @@
 
 .main-title {
   border: 1px solid var(--main-success-color);
-  width: 15%;
+  width: 10%;
   display: grid;
   grid-template-columns: 20% 80%;
   grid-template-rows: auto;
   border-radius: 10px;
-  padding: 10px;
-  font-size: 0.9rem;
+  padding: 5px;
+  font-size: 0.5rem;
   color: var(--main-success-color);
   margin: 0 auto;
 }
@@ -16,13 +16,13 @@
   display: none;
 }
 svg {
-  margin-top: 10px;
+  margin: auto;
 }
 
 @media screen and (min-width: 500px) {
   .main-title {
     width: 70%;
-    font-size: 1rem;
+    font-size: 0.5rem;
   }
   .main-title h1 {
     display: inline;
@@ -31,7 +31,7 @@ svg {
 @media screen and (min-width: 700px) {
   .main-title {
     width: 50%;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
   }
   svg {
     margin-top: 10px;
