Finish expenses page

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -4,4 +4,6 @@
   --main-success-color: #457b9d;
   --main-error-color: #e63946;
   --main-soft-color: #a8dadc;
+  --main-text-color: #495057;
+  --main-input-border-color: #ced4da;
 }
