--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,13 +1,12 @@
 @import "../assets/colors.css";
 
-footer {
+.footer {
+  display: block;
   text-align: center;
   width: 100%;
   background-color: var(--main-strong-color);
   color: var(--main-body-color);
   padding: 5px 0px;
-  position: absolute;
-  bottom: 0px;
   margin: 0;
   font-size: 1em;
 }
