--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,14 +1,9 @@
-@import "../assets/colors.css";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-html {
-  margin: 0;
-  padding: 0;
-}
-body {
-  margin: 0;
-  font-family: "Robot", sans-serif;
-  background-color: var(--main-body-color);
-}
 .main-layout .content {
-  padding: 20px;
+  padding: 20px 0px;
+}
+
+@media screen and (min-width: 700px) {
+  .main-layout .content {
+    padding: 20px 20px 50px 20px;
+  }
 }
